# paper-formatter

./: Cargo.toml  README.md  build.sh  main.js
.github/workflows/: CI.yml
pkg/: package.json  paper_formatter.d.ts  paper_formatter.js  paper_formatter_bg.wasm  paper_formatter_bg.wasm.d.ts
public/: index.html  main.js  style.css
src/: lib.rs  main.rs
tests/: test_all.rs
