[package]
name = "paper-formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
js-sys = "0.3.64"
regex = "1.10.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.107"
unic-normal = "0.9.0"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "lib"]
